feat: Revisit Hash On-Init for AllBlocksHasher (#2704)
* Move the `AllPreviousBlocksRootHashHasherSnapshot` to internal protos
* All blocks hasher general cleanup and hardening
* Configuration property for optional hashing from history
* Remove time-based `AllPreviousBlocksRootHashHasherSnapshot` persistence and make it block based (configurable)
* Consolidate verification additions from #2535 and #2666

Signed-off-by: Atanas Atanasov <a.v.atanasov98@gmail.com>