@@ -33,6 +33,7 @@ import org.hiero.block.common.hasher.HashingUtilities;
 import org.hiero.block.common.hasher.NaiveStreamingTreeHasher;
 import org.hiero.block.common.hasher.StreamingHasher;
 import org.hiero.block.common.hasher.StreamingTreeHasher;
+import org.hiero.block.internal.AllPreviousBlocksRootHashHasherSnapshot;
 import org.hiero.block.internal.BlockItemUnparsed;
 import org.hiero.block.node.app.fixtures.blocks.MinimalBlockAccessor;
 import org.hiero.block.node.app.fixtures.plugintest.SimpleBlockRangeSet;
@@ -62,7 +63,7 @@ class AllBlocksHasherHandlerTest {
     @Test
     void initializesFromGenesisWhenStoreEmpty() throws Exception {
         final Path hasherFile = tempDir.resolve("hasher.bin");
-        final VerificationConfig config = new VerificationConfig(hasherFile, true, 10, Path.of(""));
+        final VerificationConfig config = new VerificationConfig(hasherFile, true, false, 10, Path.of(""));
         final HistoricalBlockFacility facility = new HistoricalBlockFacility() {
             @Override
             public BlockAccessor block(long blockNumber) {
@@ -87,13 +88,13 @@ class AllBlocksHasherHandlerTest {
     void rebuildsFromStoreWhenFileMissing() throws Exception {
         final BlockChainData chain = buildBlockChain(10);
         final Path hasherFile = tempDir.resolve("rebuild.bin");
-        final VerificationConfig config = new VerificationConfig(hasherFile, true, 10, Path.of(""));
+        final VerificationConfig config = new VerificationConfig(hasherFile, true, true, 10, Path.of(""));
         final AllBlocksHasherHandler handler =
                 new AllBlocksHasherHandler(config, buildContext(new ChainHistoricalBlockFacility(chain)));
 
         assertTrue(handler.isAvailable());
         assertEquals(chain.blocks().size(), handler.getNumberOfBlocks());
-        assertArrayEquals(chain.blockHashes().get(chain.blockHashes().size() - 1), handler.lastBlockHash());
+        assertArrayEquals(chain.blockHashes().getLast(), handler.lastBlockHash());
         assertArrayEquals(chain.expectedRootHash(), handler.computeRootHash());
     }
 
@@ -104,7 +105,7 @@ class AllBlocksHasherHandlerTest {
         persistHasher(hasherFile, chain.blockHashes());
         final long originalSize = Files.size(hasherFile);
 
-        final VerificationConfig config = new VerificationConfig(hasherFile, true, 10, Path.of(""));
+        final VerificationConfig config = new VerificationConfig(hasherFile, true, false, 10, Path.of(""));
         final AllBlocksHasherHandler handler =
                 new AllBlocksHasherHandler(config, buildContext(new ChainHistoricalBlockFacility(chain)));
 
@@ -122,7 +123,7 @@ class AllBlocksHasherHandlerTest {
         final List<byte[]> partialHashes = chain.blockHashes().subList(0, 5);
         persistHasher(hasherFile, partialHashes);
 
-        final VerificationConfig config = new VerificationConfig(hasherFile, true, 10, Path.of(""));
+        final VerificationConfig config = new VerificationConfig(hasherFile, true, false, 10, Path.of(""));
         final AllBlocksHasherHandler handler =
                 new AllBlocksHasherHandler(config, buildContext(new ChainHistoricalBlockFacility(chain)));
 
@@ -140,7 +141,7 @@ class AllBlocksHasherHandlerTest {
                 chain.blockHashes().subList(0, chain.blockHashes().size() - 1);
         persistHasher(hasherFile, partialHashes);
 
-        final VerificationConfig config = new VerificationConfig(hasherFile, true, 10, Path.of(""));
+        final VerificationConfig config = new VerificationConfig(hasherFile, true, false, 10, Path.of(""));
         final AllBlocksHasherHandler handler =
                 new AllBlocksHasherHandler(config, buildContext(new ChainHistoricalBlockFacility(chain)));
 
@@ -158,7 +159,7 @@ class AllBlocksHasherHandlerTest {
         final List<byte[]> partialHashes = new ArrayList<byte[]>();
         persistHasher(hasherFile, partialHashes);
 
-        final VerificationConfig config = new VerificationConfig(hasherFile, false, 10, Path.of(""));
+        final VerificationConfig config = new VerificationConfig(hasherFile, false, false, 10, Path.of(""));
         final AllBlocksHasherHandler handler =
                 new AllBlocksHasherHandler(config, buildContext(new ChainHistoricalBlockFacility(chain)));
 
@@ -178,7 +179,7 @@ class AllBlocksHasherHandlerTest {
         final List<byte[]> longerChainHashes = longerChain.blockHashes();
         persistHasher(hasherFile, longerChainHashes);
 
-        final VerificationConfig config = new VerificationConfig(hasherFile, true, 10, Path.of(""));
+        final VerificationConfig config = new VerificationConfig(hasherFile, true, false, 10, Path.of(""));
         final AllBlocksHasherHandler handler =
                 new AllBlocksHasherHandler(config, buildContext(new ChainHistoricalBlockFacility(chain)));
 
